# Newsletter

./: .env.example  .gitignore  README.md  config.py  feeds.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: nightly.yml
email_sender/: __init__.py  sender.py
providers/: gas.py  history.py  holidays.py  national_news.py  rss.py  weather.py
renderer/: __init__.py  template.html.j2
storage/: state.py
tests/: test_date_filtering.py  test_dedup.py  test_url_normalization.py
utils/: helpers.py
